--- a/Examples/Example-macOS/Podfile
+++ b/Examples/Example-macOS/Podfile
@@ -3,5 +3,5 @@ target 'Example-macOS' do
 
   # AppAuth Pod
   # In production, just use `pod 'AppAuth'` without the path reference.
-  pod 'AppAuth', :path => '../../'
+  pod 'AppAuthWB', :path => '../../'
 end
